[project]
name = "radar-jupyter"
version = "0.1.0"
description = "Python library for interacting with the RADAR research data repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib<3.11.0",
    "requests>=2.34.2",
    "sparqlwrapper>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["radar_jupyter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "network: tests that perform live HTTP requests (deselect with '-m \"not network\"')",
]
